parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TEXTO_MAL_FORMADO
    VALOR_DATA
    VALOR_HORARIO

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> COMENTARIO
Rule 4     statement -> IFSULDEMINAS PONTO_FINAL
Rule 5     expr -> VALOR_INTEIRO
Rule 6     expr -> VALOR_REAL
Rule 7     expr -> VAR
Rule 8     expr -> expr OPER_MATEMATICO expr
Rule 9     expr -> ABRE_PARENT expr FECHA_PARENT
Rule 10    statement -> TIPO_VAR VAR PONTO_FINAL
Rule 11    statement -> TIPO_VAR VAR OPER_ATRIB expr PONTO_FINAL
Rule 12    statement -> TIPO_VAR VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
Rule 13    statement -> TIPO_VAR VAR OPER_ATRIB VAR PONTO_FINAL
Rule 14    statement -> TIPO_VAR VAR OPER_ATRIB VAR_SENSOR PONTO_FINAL
Rule 15    statement -> VAR OPER_ATRIB expr PONTO_FINAL
Rule 16    statement -> VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
Rule 17    statement -> VAR OPER_ATRIB VAR PONTO_FINAL
Rule 18    param_vazio -> <empty>
Rule 19    param -> VALOR_INTEIRO
Rule 20    param -> VALOR_REAL
Rule 21    param -> VALOR_TEXTO
Rule 22    param -> VAR
Rule 23    param -> param VIRGULA param
Rule 24    funcao -> NOME_FUNCAO ABRE_PARENT param_vazio FECHA_PARENT
Rule 25    funcao -> NOME_FUNCAO ABRE_PARENT param FECHA_PARENT
Rule 26    statement -> funcao PONTO_FINAL
Rule 27    statement -> DEFINE_FUNCAO funcao ABRE_CHAVES statements FECHA_CHAVES
Rule 28    cond_param -> VAR OPER_RELA VALOR_INTEIRO
Rule 29    cond_param -> VAR OPER_RELA VALOR_REAL
Rule 30    cond_param -> VAR OPER_RELA VALOR_TEXTO
Rule 31    cond_param -> VAR OPER_RELA VAR
Rule 32    cond_param -> VAR OPER_RELA VALOR_LOGICO
Rule 33    cond_param -> VAR OPER_RELA VAR_SENSOR
Rule 34    cond_param -> cond_param OPER_LOGICO cond_param
Rule 35    senaose -> COND_SENAOSE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 36    senaose -> senaose senaose
Rule 37    statement -> COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 38    statement -> COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose
Rule 39    statement -> COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
Rule 40    statement -> COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
Rule 41    statement -> REP_PARA ABRE_PARENT VAR OPER_ATRIB VALOR_INTEIRO VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 42    statement -> REP_PARA ABRE_PARENT VAR OPER_ATRIB VAR VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 43    statement -> REP_PARA ABRE_PARENT VAR OPER_ATRIB VAR_SENSOR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 44    statement -> REP_PARA ABRE_PARENT VAR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 45    statement -> REP_ENQUANTO ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
Rule 46    statement -> TENTAR ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_CHAVES statements FECHA_CHAVES
Rule 47    statement -> TENTAR ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_PARENT VAR FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES

Terminals, with rules where they appear

ABRE_CHAVES          : 27 35 37 38 39 39 40 40 41 42 43 44 45 46 46 47 47
ABRE_PARENT          : 9 24 25 35 37 38 39 40 41 42 43 44 45 47
CASO_ERRO            : 46 47
COMENTARIO           : 3
COND_SE              : 37 38 39 40
COND_SENAO           : 39 40
COND_SENAOSE         : 35
DEFINE_FUNCAO        : 27
FECHA_CHAVES         : 27 35 37 38 39 39 40 40 41 42 43 44 45 46 46 47 47
FECHA_PARENT         : 9 24 25 35 37 38 39 40 41 42 43 44 45 47
IFSULDEMINAS         : 4
NOME_FUNCAO          : 24 25
OPER_ATRIB           : 11 12 13 14 15 16 17 41 41 42 42 43 43 44
OPER_LOGICO          : 34
OPER_MATEMATICO      : 8 41 42 43 44
OPER_RELA            : 28 29 30 31 32 33
PONTO_FINAL          : 4 10 11 12 13 14 15 16 17 26
REP_ENQUANTO         : 45
REP_PARA             : 41 42 43 44
TENTAR               : 46 47
TEXTO_MAL_FORMADO    : 
TIPO_VAR             : 10 11 12 13 14
VALOR_DATA           : 
VALOR_HORARIO        : 
VALOR_INTEIRO        : 5 19 28 41 41 42 43 44
VALOR_LOGICO         : 32
VALOR_REAL           : 6 20 29
VALOR_TEXTO          : 12 16 21 30
VAR                  : 7 10 11 12 13 13 14 15 16 17 17 22 28 29 30 31 31 32 33 41 41 41 42 42 42 42 43 43 43 44 44 44 47
VAR_SENSOR           : 14 33 43
VIRGULA              : 23 41 41 42 42 43 44
error                : 

Nonterminals, with rules where they appear

cond_param           : 34 34 35 37 38 39 40 41 42 43 44 45
expr                 : 8 8 9 11 15
funcao               : 26 27
param                : 23 23 25
param_vazio          : 24
senaose              : 36 36 38 39
statement            : 1 2
statements           : 1 27 35 37 38 39 39 40 40 41 42 43 44 45 46 46 47 47 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . COMENTARIO
    (4) statement -> . IFSULDEMINAS PONTO_FINAL
    (10) statement -> . TIPO_VAR VAR PONTO_FINAL
    (11) statement -> . TIPO_VAR VAR OPER_ATRIB expr PONTO_FINAL
    (12) statement -> . TIPO_VAR VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
    (13) statement -> . TIPO_VAR VAR OPER_ATRIB VAR PONTO_FINAL
    (14) statement -> . TIPO_VAR VAR OPER_ATRIB VAR_SENSOR PONTO_FINAL
    (15) statement -> . VAR OPER_ATRIB expr PONTO_FINAL
    (16) statement -> . VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
    (17) statement -> . VAR OPER_ATRIB VAR PONTO_FINAL
    (26) statement -> . funcao PONTO_FINAL
    (27) statement -> . DEFINE_FUNCAO funcao ABRE_CHAVES statements FECHA_CHAVES
    (37) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (38) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose
    (39) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
    (40) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
    (41) statement -> . REP_PARA ABRE_PARENT VAR OPER_ATRIB VALOR_INTEIRO VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (42) statement -> . REP_PARA ABRE_PARENT VAR OPER_ATRIB VAR VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (43) statement -> . REP_PARA ABRE_PARENT VAR OPER_ATRIB VAR_SENSOR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (44) statement -> . REP_PARA ABRE_PARENT VAR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (45) statement -> . REP_ENQUANTO ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (46) statement -> . TENTAR ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_CHAVES statements FECHA_CHAVES
    (47) statement -> . TENTAR ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_PARENT VAR FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (24) funcao -> . NOME_FUNCAO ABRE_PARENT param_vazio FECHA_PARENT
    (25) funcao -> . NOME_FUNCAO ABRE_PARENT param FECHA_PARENT

    COMENTARIO      shift and go to state 3
    IFSULDEMINAS    shift and go to state 4
    TIPO_VAR        shift and go to state 5
    VAR             shift and go to state 6
    DEFINE_FUNCAO   shift and go to state 8
    COND_SE         shift and go to state 9
    REP_PARA        shift and go to state 10
    REP_ENQUANTO    shift and go to state 11
    TENTAR          shift and go to state 12
    NOME_FUNCAO     shift and go to state 13

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    funcao                         shift and go to state 7

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . COMENTARIO
    (4) statement -> . IFSULDEMINAS PONTO_FINAL
    (10) statement -> . TIPO_VAR VAR PONTO_FINAL
    (11) statement -> . TIPO_VAR VAR OPER_ATRIB expr PONTO_FINAL
    (12) statement -> . TIPO_VAR VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
    (13) statement -> . TIPO_VAR VAR OPER_ATRIB VAR PONTO_FINAL
    (14) statement -> . TIPO_VAR VAR OPER_ATRIB VAR_SENSOR PONTO_FINAL
    (15) statement -> . VAR OPER_ATRIB expr PONTO_FINAL
    (16) statement -> . VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
    (17) statement -> . VAR OPER_ATRIB VAR PONTO_FINAL
    (26) statement -> . funcao PONTO_FINAL
    (27) statement -> . DEFINE_FUNCAO funcao ABRE_CHAVES statements FECHA_CHAVES
    (37) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (38) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose
    (39) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
    (40) statement -> . COND_SE ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
    (41) statement -> . REP_PARA ABRE_PARENT VAR OPER_ATRIB VALOR_INTEIRO VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (42) statement -> . REP_PARA ABRE_PARENT VAR OPER_ATRIB VAR VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (43) statement -> . REP_PARA ABRE_PARENT VAR OPER_ATRIB VAR_SENSOR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (44) statement -> . REP_PARA ABRE_PARENT VAR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (45) statement -> . REP_ENQUANTO ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (46) statement -> . TENTAR ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_CHAVES statements FECHA_CHAVES
    (47) statement -> . TENTAR ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_PARENT VAR FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (24) funcao -> . NOME_FUNCAO ABRE_PARENT param_vazio FECHA_PARENT
    (25) funcao -> . NOME_FUNCAO ABRE_PARENT param FECHA_PARENT

    COMENTARIO      shift and go to state 3
    IFSULDEMINAS    shift and go to state 4
    TIPO_VAR        shift and go to state 5
    VAR             shift and go to state 6
    DEFINE_FUNCAO   shift and go to state 8
    COND_SE         shift and go to state 9
    REP_PARA        shift and go to state 10
    REP_ENQUANTO    shift and go to state 11
    TENTAR          shift and go to state 12
    NOME_FUNCAO     shift and go to state 13

    statement                      shift and go to state 14
    funcao                         shift and go to state 7

state 2

    (2) statements -> statement .

    COMENTARIO      reduce using rule 2 (statements -> statement .)
    IFSULDEMINAS    reduce using rule 2 (statements -> statement .)
    TIPO_VAR        reduce using rule 2 (statements -> statement .)
    VAR             reduce using rule 2 (statements -> statement .)
    DEFINE_FUNCAO   reduce using rule 2 (statements -> statement .)
    COND_SE         reduce using rule 2 (statements -> statement .)
    REP_PARA        reduce using rule 2 (statements -> statement .)
    REP_ENQUANTO    reduce using rule 2 (statements -> statement .)
    TENTAR          reduce using rule 2 (statements -> statement .)
    NOME_FUNCAO     reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    FECHA_CHAVES    reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> COMENTARIO .

    COMENTARIO      reduce using rule 3 (statement -> COMENTARIO .)
    IFSULDEMINAS    reduce using rule 3 (statement -> COMENTARIO .)
    TIPO_VAR        reduce using rule 3 (statement -> COMENTARIO .)
    VAR             reduce using rule 3 (statement -> COMENTARIO .)
    DEFINE_FUNCAO   reduce using rule 3 (statement -> COMENTARIO .)
    COND_SE         reduce using rule 3 (statement -> COMENTARIO .)
    REP_PARA        reduce using rule 3 (statement -> COMENTARIO .)
    REP_ENQUANTO    reduce using rule 3 (statement -> COMENTARIO .)
    TENTAR          reduce using rule 3 (statement -> COMENTARIO .)
    NOME_FUNCAO     reduce using rule 3 (statement -> COMENTARIO .)
    $end            reduce using rule 3 (statement -> COMENTARIO .)
    FECHA_CHAVES    reduce using rule 3 (statement -> COMENTARIO .)


state 4

    (4) statement -> IFSULDEMINAS . PONTO_FINAL

    PONTO_FINAL     shift and go to state 15


state 5

    (10) statement -> TIPO_VAR . VAR PONTO_FINAL
    (11) statement -> TIPO_VAR . VAR OPER_ATRIB expr PONTO_FINAL
    (12) statement -> TIPO_VAR . VAR OPER_ATRIB VALOR_TEXTO PONTO_FINAL
    (13) statement -> TIPO_VAR . VAR OPER_ATRIB VAR PONTO_FINAL
    (14) statement -> TIPO_VAR . VAR OPER_ATRIB VAR_SENSOR PONTO_FINAL

    VAR             shift and go to state 16


state 6

    (15) statement -> VAR . OPER_ATRIB expr PONTO_FINAL
    (16) statement -> VAR . OPER_ATRIB VALOR_TEXTO PONTO_FINAL
    (17) statement -> VAR . OPER_ATRIB VAR PONTO_FINAL

    OPER_ATRIB      shift and go to state 17


state 7

    (26) statement -> funcao . PONTO_FINAL

    PONTO_FINAL     shift and go to state 18


state 8

    (27) statement -> DEFINE_FUNCAO . funcao ABRE_CHAVES statements FECHA_CHAVES
    (24) funcao -> . NOME_FUNCAO ABRE_PARENT param_vazio FECHA_PARENT
    (25) funcao -> . NOME_FUNCAO ABRE_PARENT param FECHA_PARENT

    NOME_FUNCAO     shift and go to state 13

    funcao                         shift and go to state 19

state 9

    (37) statement -> COND_SE . ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (38) statement -> COND_SE . ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose
    (39) statement -> COND_SE . ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES senaose COND_SENAO ABRE_CHAVES statements FECHA_CHAVES
    (40) statement -> COND_SE . ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES COND_SENAO ABRE_CHAVES statements FECHA_CHAVES

    ABRE_PARENT     shift and go to state 20


state 10

    (41) statement -> REP_PARA . ABRE_PARENT VAR OPER_ATRIB VALOR_INTEIRO VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (42) statement -> REP_PARA . ABRE_PARENT VAR OPER_ATRIB VAR VIRGULA cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (43) statement -> REP_PARA . ABRE_PARENT VAR OPER_ATRIB VAR_SENSOR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES
    (44) statement -> REP_PARA . ABRE_PARENT VAR cond_param VIRGULA VAR OPER_ATRIB VAR OPER_MATEMATICO VALOR_INTEIRO FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES

    ABRE_PARENT     shift and go to state 21


state 11

    (45) statement -> REP_ENQUANTO . ABRE_PARENT cond_param FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES

    ABRE_PARENT     shift and go to state 22


state 12

    (46) statement -> TENTAR . ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_CHAVES statements FECHA_CHAVES
    (47) statement -> TENTAR . ABRE_CHAVES statements FECHA_CHAVES CASO_ERRO ABRE_PARENT VAR FECHA_PARENT ABRE_CHAVES statements FECHA_CHAVES

    ABRE_CHAVES     shift and go to state 23


state 13

    (24) funcao -> NOME_FUNCAO . ABRE_PARENT param_vazio FECHA_PARENT
    (25) funcao -> NOME_FUNCAO . ABRE_PARENT param FECHA_PARENT

    ABRE_PARENT     shift and go to state 24


state 14

    (1) statements -> statements statement .

    COMENTARIO      reduce using rule 1 (statements -> statements statement .)
    IFSULDEMINAS    reduce using rule 1 (statements -> statements statement .)
    TIPO_VAR        reduce using rule 1 (statements -> statements statement .)
    VAR             reduce using rule 1 (statements -> statements statement .)
    DEFINE_FUNCAO   reduce using rule 1 (statements -> statements statement .)
    COND_SE         reduce using rule 1 (statements -> statements statement .)
    REP_PARA        reduce using rule 1 (statements -> statements statement .)
    REP_ENQUANTO    reduce using rule 1 (statements -> statements statement .)
    TENTAR          reduce using rule 1 (statements -> statements statement .)
    NOME_FUNCAO     reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    FECHA_CHAVES    reduce using rule 1 (statements -> statements statement .)


state 15

    (4) statement -> IFSULDEMINAS PONTO_FINAL .
